--- a/src/pages/viagem/viagem.html
+++ b/src/pages/viagem/viagem.html
@@ -1,12 +1,19 @@
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>viagem</ion-title>
-  </ion-navbar>
-
+    <ion-navbar>
+        <ion-title>
+            Viagem
+        </ion-title>
+    </ion-navbar>
 </ion-header>
 
-
 <ion-content padding>
-
+    <ion-list>
+        <ion-item>
+            <ion-avatar item-left>
+                <img src="img/avatar-cher.png">
+            </ion-avatar>
+            <h2>Cher</h2>
+            <p>Ugh. As if.</p>
+        </ion-item>
+    </ion-list>
 </ion-content>
