--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Passageiro" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Viagem" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Mensagens" tabIcon="contacts"></ion-tab>
+<ion-tabs selectedIndex="1">
+  <ion-tab [root]="tab1Root" tabTitle="Passageiro" tabIcon="people"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Viagem" tabIcon="bus" ></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Mensagens" tabIcon="send"></ion-tab>
 </ion-tabs>
