Finalizado integração viagem / passageiro / motorista

--- a/src/pages/passageiro/passageiro.html
+++ b/src/pages/passageiro/passageiro.html
@@ -7,5 +7,24 @@
 </ion-header>
 
 <ion-content>
-
+    <ion-item class="card-center">
+        <ion-img src="assets/img/luigicab.png"  class="card-img-left"></ion-img>
+        <ion-img src="assets/img/luigi.png" class="card-img-right"></ion-img>
+    </ion-item>
+    <ion-item>
+        <ion-label floating>Nome Passageiro</ion-label>
+        <ion-input type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label floating>Telefone Responsável</ion-label>
+        <ion-input type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label floating>Endereço Casa</ion-label>
+        <ion-input type="text"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label floating>Endereço Escola</ion-label>
+        <ion-input type="text"></ion-input>
+    </ion-item>
 </ion-content>
