Integração app mãe. Melhorias

--- a/src/pages/viagem/viagem.html
+++ b/src/pages/viagem/viagem.html
@@ -44,7 +44,7 @@
             </ion-list-header>
             <ion-item *ngFor="let viagemPassageiro of viagemPassageirosEntregues">
                 <ion-avatar item-left>
-                    <img src="{{viagemPassageiro.Filho.foto}}">
+                    <ion-img src="{{viagemPassageiro.Filho.foto}}"></ion-img>
                 </ion-avatar>
                 <ion-label>{{viagemPassageiro.Filho.nome}}</ion-label>
             </ion-item>
