Atualizaçoes no cadastro de passageiro

--- a/src/pages/passageiros/passageiros.html
+++ b/src/pages/passageiros/passageiros.html
@@ -20,5 +20,6 @@
             </ion-item>
         </ion-list>
     </ion-item-group>
-    <button ion-button block (click)="iniciaViagem()">Iniciar Viagem</button>
+    <button ion-button block (click)="iniciaViagem()" 
+        disabled={{desabilitaInicia}}>Iniciar Viagem</button>
 </ion-content>
