--- a/src/pages/passageiro/passageiro.html
+++ b/src/pages/passageiro/passageiro.html
@@ -7,24 +7,46 @@
 </ion-header>
 
 <ion-content>
-    <ion-item class="card-center">
-        <ion-img src="assets/img/luigicab.png"  class="card-img-left"></ion-img>
-        <ion-img src="assets/img/luigi.png" class="card-img-right"></ion-img>
-    </ion-item>
-    <ion-item>
-        <ion-label floating>Nome Passageiro</ion-label>
-        <ion-input type="text"></ion-input>
-    </ion-item>
-    <ion-item>
-        <ion-label floating>Telefone Responsável</ion-label>
-        <ion-input type="text"></ion-input>
-    </ion-item>
-    <ion-item>
-        <ion-label floating>Endereço Casa</ion-label>
-        <ion-input type="text"></ion-input>
-    </ion-item>
-    <ion-item>
-        <ion-label floating>Endereço Escola</ion-label>
-        <ion-input type="text"></ion-input>
-    </ion-item>
+    <form (ngSubmit)="salvaPassageiro()" name="formPassageiro">
+
+        <ion-item class="card-center">
+            <div class="card-div-left">
+                <img [src]="passageiro.foto" name="foto"
+                    class="card-img-left" /> <!-- *ngIf="passageiro.foto" /> -->
+                <p><button ion-button clear (click)="tiraFoto(1)">Foto Rosto</button></p>
+            </div>
+            <div class="card-div-right">
+                <img [src]="passageiro.fotoCompleta" name="fotoCompleta" 
+                    class="card-img-right" /> <!-- *ngIf="passageiro.fotoCompleta" /> -->
+                <p><button ion-button clear (click)="tiraFoto(2)">Foto Completa</button></p>
+            </div>
+        </ion-item>
+        <ion-item>
+            <ion-label floating>Nome Passageiro</ion-label>
+            <ion-input type="text" [(ngModel)]="passageiro.nome" 
+                name="nome" required></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label floating>DDD Telefone Responsável</ion-label>
+            <ion-input type="number" [(ngModel)]="passageiro.dddResponsavel" 
+                minlenght="2" maxlenght="3" name="dddResponsavel" required></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label floating>Telefone Responsável</ion-label>
+            <ion-input type="number" [(ngModel)]="passageiro.telefoneResponsavel" 
+                maxlenght="9" minlenght="8" name="telefoneResponsavel" required></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label floating>EnderecoCasa</ion-label>
+            <ion-input type="text" [(ngModel)]="passageiro.enderecoCasa" 
+                name="enderecoCasa"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label floating>Endereço Escola</ion-label>
+            <ion-input type="text" [(ngModel)]="passageiro.enderecoEscola" 
+                name="enderecoEscola"></ion-input>
+        </ion-item>
+        <br><br>
+        <button ion-button block color="secondary" type="submit">Salvar Passageiro</button>
+    </form>
 </ion-content>
